bk_ida/gobmkida/c3/compute_escape_influence
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_escape_influence/src/engine/influence.c:2016:24: error: use of undeclared identifier 'byte_9C689F'
v8 = ( unsigned __int8)byte_9C689F[v6]; 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_escape_influence/src/engine/influence.c:2017:6: error: use of undeclared identifier 'dword_A2CDEC'
if ( dword_A2CDEC[v6] != v8 ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_escape_influence/src/engine/influence.c:2019:1: error: use of undeclared identifier 'dword_A2CDEC'
dword_A2CDEC[v6] = v8; 
^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_escape_influence/src/engine/influence.c:2033:13: error: use of undeclared identifier 'compute_escape_influence_active_caches'
*( _QWORD *)compute_escape_influence_active_caches = 0LL; 
            ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_escape_influence/src/engine/influence.c:2036:6: error: use of undeclared identifier 'compute_escape_influence_active_caches'
if ( compute_escape_influence_active_caches[v9] ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_escape_influence/src/engine/influence.c:2040:6: error: use of undeclared identifier 'byte_9C689F'
if ( byte_9C689F[i * 2] != 3 ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_escape_influence/src/engine/influence.c:2041:41: error: use of undeclared identifier 'compute_escape_influence_cached_board'
escape_value[i * 2 - 1] = *( ( _BYTE *)&compute_escape_influence_cached_board[i + 399] + v9 + 2); 
                                        ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_escape_influence/src/engine/influence.c:2045:23: error: use of undeclared identifier 'compute_escape_influence_escape_values'
escape_value[i * 2] = compute_escape_influence_escape_values[1 * i + v9]; 
                      ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_escape_influence/src/engine/influence.c:2093:6: error: use of undeclared identifier 'byte_9C689F'
if ( byte_9C689F[j] != 3 ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_escape_influence/src/engine/influence.c:2098:1: error: use of undeclared identifier 'compute_escape_influence_escape_values'
compute_escape_influence_escape_values[2 * j + v10] = escape_value[j]; 
^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_escape_influence/src/engine/influence.c:2100:1: error: use of undeclared identifier 'compute_escape_influence_active_caches'
compute_escape_influence_active_caches[v10] = 1; 
^
11 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_escape_influence/src/obj/1/influence.o] Error 1
